# QT6_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Define.h  Initial.h  lib.h  utils.h
src/: utils.cpp
test/: CMakelists.txt  main.cpp
